--- a/Rag/.env
+++ b/Rag/.env
@@ -1,4 +1,5 @@
-
+LANGCHAIN_API_KEY = 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
 LANGCHAIN_PROJECT = langchain-tutorial
 LANGCHAIN_ENDPOINT = https://api.smith.langchain.com
 LANGCHAIN_TRACING_V2 = true
+OPENAI_API_KEY = "sk-bIYngax8bKXIWDsOagm8X2GYW-ZQ94-6HA56Ps9wv9T3BlbkFJo1qjOelm8BS24nklkVH7-PmoKJGrcuLLHnlBqqu-kA"
